--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "import",
     "videos"
   ],
-  "description": "Import Supervisely videos project with annotations",
+  "description": "Import videos with annotations in Supervisely format",
   "docker_image": "supervisely/base-py-sdk:6.17.3",
   "main_script": "src/main.py",
   "task_location": "workspace_tasks",
