--- a/debug.env
+++ b/debug.env
@@ -1,17 +1,15 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=15765
+TASK_ID=21171
 context.teamId=8
 context.workspaceId=349
 
-#modal.state.slyFolder=None
-#modal.state.slyFolder="/videos_example/"
-#modal.state.slyFile=
-modal.state.slyFile="/videos_example.zip"
+modal.state.slyFolder="agent://160/import-videos/video_proj/"
+#modal.state.slyFile="agent://160/import-videos/video_proj.tar.gz"
 
 
-DEBUG_APP_DIR="/home/paul/Documents/Work/Applications/import-videos-project/src/debug/app_debug_data"
-DEBUG_CACHE_DIR="/home/paul/Documents/Work/Applications/import-videos-project/src/debug/app_debug_cache"
+DEBUG_APP_DIR="src/debug/app_data"
+DEBUG_CACHE_DIR="src/debug/app_cache"
 
 
 SERVER_ADDRESS="add variable to debug_secret.env"
