--- a/debug.env
+++ b/debug.env
@@ -1,11 +1,11 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=21171
+TASK_ID=21419
 context.teamId=8
 context.workspaceId=349
 
-modal.state.slyFolder="agent://160/import-videos/video_proj/"
-#modal.state.slyFile="agent://160/import-videos/video_proj.tar.gz"
+#modal.state.slyFolder="agent://160/import-videos/video_proj/"
+modal.state.slyFile="/21381_12342_cars.mp4.tar.gz"
 
 
 DEBUG_APP_DIR="src/debug/app_data"
