--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   "docker_image": "supervisely/base-py-sdk:6.72.49",
   "main_script": "src/main.py",
   "task_location": "workspace_tasks",
-  "icon": "https://i.imgur.com/PF9YLqA.png",
+  "icon": "media/icon.png",
   "icon_cover": true,
   "poster": "https://user-images.githubusercontent.com/48245050/182845074-905a4570-31bf-4c1a-8cb4-283157781530.jpg",
   "headless": true,
