--- a/local.env
+++ b/local.env
@@ -4,8 +4,9 @@ TASK_ID=31145
 context.teamId=435
 context.workspaceId=684
 
-modal.state.slyFolder="/video_proj/"
-# modal.state.slyFile="/Users/almaz/job/supervisely/projects/import-videos-in-sly-format/video_proj.tar"
+modal.state.slyFolder=/import/import-videos-in-supervisely-format/2023-10-27 13:18:28.852/without_ann_dir
+
+#modal.state.slyFile=/import/import-videos-in-supervisely-format/2023-10-27 14:16:21.351/without_key_id_map_dir/ds0/video/video1_1.mp4
 
 
 DEBUG_APP_DIR="src/debug/app_data"
