--- a/local.env
+++ b/local.env
@@ -1,13 +1,14 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=31145
-context.teamId=435
-context.workspaceId=684
+TASK_ID=54256
+context.teamId=8
+context.workspaceId=7
 
-modal.state.slyFolder=/import/import-videos-in-supervisely-format/2023-10-27 13:18:28.852/without_ann_dir
+modal.state.slyFolder=/tmp/supervisely/export/Export Videos in Supervisely format/54258_5249_test2/
 
 #modal.state.slyFile=/import/import-videos-in-supervisely-format/2023-10-27 14:16:21.351/without_key_id_map_dir/ds0/video/video1_1.mp4
 
 
 DEBUG_APP_DIR="src/debug/app_data"
 DEBUG_CACHE_DIR="src/debug/app_cache"
+AGENT_TOKEN="IdNg4CUuqvMBE7J4ppZamjqdh6yy2xjl"
